use-case1-host-and-path-routing/lab/bonus/coffee-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-coffee
spec:
  parentRefs:
  - name: cafe-gateway
    sectionName: http-coffee
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /coffee
    backendRefs:
    - name: coffee
      port: 80
