use-case1-host-and-path-routing/lab/bonus/tea-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-tea
spec:
  parentRefs:
  - name: cafe-gateway
    sectionName: http-tea
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /tea
    backendRefs:
    - name: tea
      port: 80
